header + animations created

--- a/index.html
+++ b/index.html
@@ -11,16 +11,19 @@
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
+    <link href="https://fonts.googleapis.com/css?family=Overlock:900|Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Satisfy&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/stylesheets/style.css" />
   </head>
   <body>
 
+<div class="container-fluid header">
   <!-- NAVIGATION -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-top">
       <a class="navbar-brand" href="#">
         <img src="/docs/4.3/assets/brand/bootstrap-solid.svg" width="30" height="30" alt="">
       </a>
-      <a class="navbar-brand" href="#">Navbar</a>
+      <p class="navbar-brand brand-light" href="#">Nadine Juraschek</p>
       <button
         class="navbar-toggler"
         type="button"
@@ -52,47 +55,48 @@
 
   <!-- HEADER -->
     <div class="jumbotron-fluid">
-        <h1 class="display-4">Hello, world!</h1>
+        <h1 class="display-4">Hi, I'm Nadine.</h1> Nice to meet you!
         <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to
         featured content or information.</p>
-        <hr class="my-4">
-        <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-        <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+        <p class="lg-paragraph">Let's work together!</p>
+        <a class="btn btn-primary btn-lg" href="#" role="button">Say Hello</a>
     </div>
+</div>
 
   <!-- PORTFOLIO PREVIEW -->
+    <div class="container">
+        <h1 class="section-header">Recent Projects</h1>
+        <p class="section-paragraph">See more <a href="portfolio.html" class="portfolio-link">here</a>.</p>
     <div class="card-group">
         <div class="card">
-            <img src="..." class="card-img-top" alt="...">
             <div class="card-body">
-                <h5 class="card-title">Card title</h5>
+                <h5 class="card-title">Project 1</h5>
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
                     content. This content is a little bit longer.</p>
-                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                <p class="card-text"><small class="text-muted">COMING SOON</small></p>
             </div>
         </div>
         <div class="card">
-            <img src="..." class="card-img-top" alt="...">
             <div class="card-body">
-                <h5 class="card-title">Card title</h5>
+                <h5 class="card-title">Project 2</h5>
                 <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                <p class="card-text"><small class="text-muted">COMING SOON</small></p>
             </div>
         </div>
         <div class="card">
-            <img src="..." class="card-img-top" alt="...">
             <div class="card-body">
-                <h5 class="card-title">Card title</h5>
+                <h5 class="card-title">Project 3</h5>
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
                     content. This card has even longer content than the first to show that equal height action.</p>
-                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                <p class="card-text"><small class="text-muted">COMING SOON</small></p>
             </div>
         </div>
+    </div>
     </div>
 
   <!-- FOOTER -->
-    <nav class="navbar fixed-bottom navbar-light bg-light">
-        <p class="copyright">Fixed bottom</p>
+    <nav class="navbar fixed-bottom">
+        <p class="copyright">® 2019</p>
     </nav>
 
   </body>
