--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
     <link href="https://fonts.googleapis.com/css?family=Overlock:900|Roboto&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Satisfy&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/stylesheets/style.css" />
   </head>
   <body>
 
-<div class="container-fluid header">
+<header class="container-fluid header">
   <!-- NAVIGATION -->
     <nav class="navbar navbar-expand-lg navbar-top">
       <a class="navbar-brand" href="#">
-        <img src="/docs/4.3/assets/brand/bootstrap-solid.svg" width="30" height="30" alt="">
+        <i class="far fa-circle logo"></i> <!-- Placeholder Logo -->
       </a>
-      <p class="navbar-brand brand-light" href="#">Nadine Juraschek</p>
       <button
         class="navbar-toggler"
         type="button"
@@ -54,49 +54,83 @@
     </nav>
 
   <!-- HEADER -->
-    <div class="jumbotron-fluid">
-        <h1 class="display-4">Hi, I'm Nadine.</h1> Nice to meet you!
-        <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to
-        featured content or information.</p>
-        <p class="lg-paragraph">Let's work together!</p>
-        <a class="btn btn-primary btn-lg" href="#" role="button">Say Hello</a>
-    </div>
-</div>
+    <section class="jumbotron-fluid">
+        <h1 class="heading-primary">
+          <span class="heading-primary-main">Nadine Juraschek</span>
+          <span class="heading-primary-sub">Web Developer</span>
+        </h1> <!-- h1 is important for search engines: job title and name need to be in h1 -->
+        <a class="btn btn-white btn-lg" href="#" role="button">Say Hello</a>
+      </section>
+</header>
 
   <!-- PORTFOLIO PREVIEW -->
-    <div class="container">
-        <h1 class="section-header">Recent Projects</h1>
-        <p class="section-paragraph">See more <a href="portfolio.html" class="portfolio-link">here</a>.</p>
-    <div class="card-group">
-        <div class="card">
-            <div class="card-body">
+    <section class="container section-about">
+      <h2 class="section-heading">About Me</h2>
+        <div class="row">
+          <div class="col-md-3 col-sm-12">
+            <img class="profile-img" src="assets/images/IMG_5540.JPG" alt="profile-img">
+          </div>
+          <div class="col-md-9 col-sm-12">
+            <p class="lead">Cupcake ipsum dolor sit amet chocolate cake sugar plum sweet roll cheesecake. Icing pastry cupcake powder. Liquorice
+        croissant icing tiramisu marshmallow dragée toffee toffee. Cheesecake pie cotton candy cheesecake cake cake dragée.
+        Jelly beans jelly-o marzipan gummies sweet roll toffee. Jelly-o ice cream bear claw gingerbread.</p>
+          </div>
+        </div>
+    </section>
+    <section class="section-something">
+      <h2 class="section-heading rotated">NEW SECTION</h2>
+      <p class="section-paragraph rotated">Not sure what this section is about yet. But I don't want the Project Previews on a colored background... Maybe work-process or education?</p>
+    </section>
+    <section class="section-project-preview">
+      <h2 class="section-heading rotated">Recent Projects</h2>
+      <div class="conatiner rotated project-container">
+        <div class="row">
+          <div class="col-lg-4 col-md-12">
+            <div class="card project-1"><a class="hover-img" href="#">
+              <div class="card-body">
+                <p class="card-text">This is a short description of the project. More text more text more text more text more text more text more text more text.</p>
                 <h5 class="card-title">Project 1</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-                    content. This content is a little bit longer.</p>
-                <p class="card-text"><small class="text-muted">COMING SOON</small></p>
-            </div>
-        </div>
-        <div class="card">
-            <div class="card-body">
+              </div>
+            </div></a>
+          </div>
+          <div class="col-lg-4 col-md-12">
+            <div class="card project-2"><a class="hover-img" href="#">
+              <div class="card-body">
+                <p class="card-text">This is a short description of the project. More text more text more text more text more text more text more
+                text more text.</p>
                 <h5 class="card-title">Project 2</h5>
-                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-                <p class="card-text"><small class="text-muted">COMING SOON</small></p>
+              </div>
+              </a>
             </div>
-        </div>
-        <div class="card">
-            <div class="card-body">
+          </div>
+          <div class="col-lg-4 col-md-12">
+            <div class="card project-3"><a class="hover-img" href="#">
+              <div class="card-body">
+                <p class="card-text">This is a short description of the project. More text more text more text more text more text more text more
+                text more text.</p>
                 <h5 class="card-title">Project 3</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-                    content. This card has even longer content than the first to show that equal height action.</p>
-                <p class="card-text"><small class="text-muted">COMING SOON</small></p>
+              </div>
             </div>
+            </a>
+          </div>
         </div>
-    </div>
-    </div>
+      </div>
+      </div>
+      <p class="section-paragraph rotated">See more <a href="portfolio.html" class="portfolio-link">here</a>.</p>
+    </section>
+    <section class="section-contact">
+      <h4>Let's work together!</h4>
+      <!-- <p>
+        <a class="icons"href="#"><i class="fab fa-linkedin"></i></a>
+        <a class="icons"href="#"><i class="fab fa-github"></i></a>
+      </p> -->
+      <a class="btn btn-white btn-lg" href="contact.html" role="button">Contact Me</a>
+    </section>
 
   <!-- FOOTER -->
     <nav class="navbar fixed-bottom">
-        <p class="copyright">® 2019</p>
+        <p class="copyright">Copyright ®</p>
+        <p class="credit"></p>
     </nav>
 
   </body>
