--- a/index.html
+++ b/index.html
@@ -54,23 +54,27 @@
     </nav>
 
   <!-- HEADER -->
-    <section class="jumbotron-fluid">
+  <section class="jumbotron-fluid"> <!-- why does the content not fully show up on mobile devices? -->
+    <div class="row">
+      <div class="col-12">
         <h1 class="heading-primary">
           <span class="heading-primary-main">Nadine Juraschek</span>
           <span class="heading-primary-sub">Web Developer</span>
         </h1> <!-- h1 is important for search engines: job title and name need to be in h1 -->
         <a class="btn btn-white btn-lg" href="#" role="button">Say Hello</a>
-      </section>
+      </div>
+    </div>
+  </section>
 </header>
 
   <!-- PORTFOLIO PREVIEW -->
     <section class="container section-about">
       <h2 class="section-heading">About Me</h2>
         <div class="row">
-          <div class="col-md-3 col-sm-12">
+          <div class="col-lg-3 col-md-12">
             <img class="profile-img" src="assets/images/IMG_5540.JPG" alt="profile-img">
           </div>
-          <div class="col-md-9 col-sm-12">
+          <div class="col-lg-9 col-md-12">
             <p class="lead">Cupcake ipsum dolor sit amet chocolate cake sugar plum sweet roll cheesecake. Icing pastry cupcake powder. Liquorice
         croissant icing tiramisu marshmallow dragée toffee toffee. Cheesecake pie cotton candy cheesecake cake cake dragée.
         Jelly beans jelly-o marzipan gummies sweet roll toffee. Jelly-o ice cream bear claw gingerbread.</p>
@@ -129,8 +133,7 @@
 
   <!-- FOOTER -->
     <nav class="navbar fixed-bottom">
-        <p class="copyright">Copyright ®</p>
-        <p class="credit"></p>
+        <p class="copyright mx-auto">Copyright ®</p>
     </nav>
 
   </body>
