portfolio.html completed

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </nav>
 
   <!-- HEADER -->
-  <section class="jumbotron-fluid"> <!-- why does the content not fully show up on mobile devices? -->
+  <section class="jumbotron-fluid">
     <div class="row">
       <div class="col-12">
         <h1 class="heading-primary">
