--- a/portfolio.html
+++ b/portfolio.html
@@ -48,13 +48,52 @@
   <section class="jumbotron-fluid">
     <div class="row">
       <div class="col-12">
-        <h1 class="heading-short">Portfolio</h1>
+        <h1 class="heading-primary">
+          <span class="heading-primary-main">Nadine Juraschek</span>
+          <span class="heading-primary-sub">Portfolio</span>
+        </h1>
       </div>
     </div>
   </section>
   </header>
 
-
+  <!-- PORTFOLIO MAIN -->
+  <section class="portfolio-main">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4 col-sm-12 pro-img pro-one">
+        </div>
+        <div class="col-md-8 col-sm-12 pro-summary">
+          <h3>Project 1</h3>
+          <p>Text to describe the project. Bla bla bla bla bla bla bla bla bla bla bla bla bla.</p>
+        </div>
+        <div class="col-md-4 col-sm-12 pro-img pro-two">
+        </div>
+        <div class="col-md-8 col-sm-12 pro-summary">
+          <h3>Project 2</h3>
+          <p>Text to describe the project. Bla bla bla bla bla bla bla bla bla bla bla bla bla.</p>
+        </div>
+        <div class="col-md-4 col-sm-12 pro-img pro-three">
+        </div>
+        <div class="col-md-8 col-sm-12 pro-summary">
+          <h3>Project 3</h3>
+          <p>Text to describe the project. Bla bla bla bla bla bla bla bla bla bla bla bla bla.</p>
+        </div>
+        <div class="col-md-4 col-sm-12 pro-img pro-four">
+        </div>
+        <div class="col-md-8 col-sm-12 pro-summary">
+          <h3>Project 4</h3>
+          <p>Text to describe the project. Bla bla bla bla bla bla bla bla bla bla bla bla bla.</p>
+        </div>
+        <div class="col-md-4 col-sm-12 pro-img pro-five">
+        </div>
+        <div class="col-md-8 col-sm-12 pro-summary">
+          <h3>Project 5</h3>
+          <p>Text to describe the project. Bla bla bla bla bla bla bla bla bla bla bla bla bla.</p>
+        </div>
+      </div>    
+    </div>
+  </section>
 
   <!-- FOOTER -->
   <nav class="navbar fixed-bottom">
