--- a/contact.html
+++ b/contact.html
@@ -26,5 +26,85 @@
     <link rel="stylesheet" href="assets/stylesheets/style.css" />
   </head>
 
-  <body></body>
+  <body>
+
+    <header class="container-fluid header short">
+      <!-- NAVIGATION -->
+      <nav class="navbar navbar-expand-lg navbar-top">
+        <a class="navbar-brand" href="#">
+          <i class="far fa-circle logo"></i> <!-- Placeholder Logo -->
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item active">
+              <a class="nav-link" href="index.html">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="portfolio.html">Portfolio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contact.html">Contact
+                <span class="sr-only">(current)</span>
+              </a>
+            </li>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    
+      <!-- HEADER -->
+      <section class="jumbotron-fluid">
+        <div class="row">
+          <div class="col-12">
+            <h1 class="heading-primary">
+              <span class="heading-primary-main">Nadine Juraschek</span>
+              <span class="heading-primary-sub">Contact</span>
+            </h1>
+          </div>
+        </div>
+      </section>
+    </header>
+
+    <!-- SOCIAL MEDIA -->
+    <section class="social-media">
+      <p>
+        <a class="icons"href="#"><i class="fab fa-linkedin"></i></a>
+        <a class="icons"href="#"><i class="fab fa-github"></i></a>
+        <a class="icons" href="#"><i class="fab fa-stack-overflow"></i></a>
+        <a class="icons" href="#"><i class="fab fa-twitter"></i></a>
+      </p>
+    </section>
+
+    <!-- CONTACT FORM -->
+    <section class="container form">
+      <form>
+        <div class="form-group">
+          <label for="inputName">Name</label>
+          <input type="text" class="form-control" id="inputName" placeholder="John Smith" required>
+        </div>
+        <div class="form-group">
+          <label for="inputEmail1">Email</label>
+          <input type="email" class="form-control" id="inputEmail1" aria-describedby="emailHelp"
+            placeholder="example@gmail.com" required>
+        </div>
+        <div class="form-group">
+          <label for="inputMessage">Message</label>
+          <input type="textarea" class="form-control" id="inputMessage" placeholder="Enter your message here" required>
+        </div>
+        <button type="submit" class="btn btn-pink btn-submit btn-lg">Submit</button>
+      </form>
+    </section>
+
+
+    <!-- CONTACT FORM -->
+
+    <!-- FOOTER -->
+    <nav class="navbar fixed-bottom">
+      <p class="copyright mx-auto">Copyright ®</p>
+    </nav>
+  </body>
 </html>
