fixed navbar problem

--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
 
     <header class="container-fluid header short">
       <!-- NAVIGATION -->
-      <nav class="navbar navbar-expand-lg navbar-top">
+      <nav class="navbar navbar-expand-lg navbar-top navbar-light">
         <a class="navbar-brand" href="#">
           <i class="far fa-circle logo"></i> <!-- Placeholder Logo -->
         </a>
@@ -98,9 +98,6 @@
         <button type="submit" class="btn btn-pink btn-submit btn-lg">Submit</button>
       </form>
     </section>
-
-
-    <!-- CONTACT FORM -->
 
     <!-- FOOTER -->
     <nav class="navbar fixed-bottom">
