--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
   <body>
 
 <header class="container-fluid header">
-  <!-- NAVIGATION -->
-    <nav class="navbar navbar-expand-lg navbar-top">
+  <!-- NAVIGATION --> <!-- Placeholder Logo -->
+
+    <nav class="navbar navbar-expand-md navbar-top navbar-light">
       <a class="navbar-brand" href="#">
         <i class="far fa-circle logo"></i> <!-- Placeholder Logo -->
       </a>
@@ -37,17 +38,13 @@
       <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item active">
-            <a class="nav-link" href="index.html">
-                About 
-                <span class="sr-only">(current)</span>
-            </a>
+            <a class="nav-link" href="index.html">About <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="portfolio.html">Portfolio</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="contact.html">Contact</a>
-          </li>
           </li>
         </ul>
       </div>
@@ -82,7 +79,7 @@
         </div>
     </section>
     <section class="section-something">
-      <h2 class="section-heading rotated">NEW SECTION</h2>
+      <h2 class="section-heading rotated">New Section</h2>
       <p class="section-paragraph rotated">Not sure what this section is about yet. But I don't want the Project Previews on a colored background... Maybe work-process or education?</p>
     </section>
     <section class="section-project-preview">
