--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
   <body>
   <header class="container-fluid header short">
   <!-- NAVIGATION -->
-  <nav class="navbar navbar-expand-lg navbar-top">
+  <nav class="navbar navbar-expand-lg navbar-top navbar-light">
     <a class="navbar-brand" href="#">
       <i class="far fa-circle logo"></i> <!-- Placeholder Logo -->
     </a>
